Changing release date and author list
git-svn-id: https://svn.mccode.org/svn/McStasTeX@106 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/datablad.tex
+++ b/trunk/datablad.tex
@@ -57,8 +57,8 @@ Telefax +45 4677 4013
 \newpage\ifodd\csname c@page\endcsname\noindent\hbox{}\par\newpage\else\fi
 \begin{datablad}
 \titel{User and Programmers Guide to the Neutron Ray-Tracing Package
- \MCS , Version 1.7}
-\forfatter{Peter Kj\ae r Willendrup, Emmanuel Farhi, Kim Lefmann, Per-Olof \AA strand, Mark Hagen and Kristian Nielsen}
+ \MCS , Version 1.9}
+\forfatter{Peter Kj\ae r Willendrup, Emmanuel Farhi, Klaus Lieutenant, Kim Lefmann, and Kristian Nielsen}
 \isbn{87--550--2929--9; 87--550--2930--2 (Internet)}\issn{0106--2840}
 \afdeling{Materials Research Department}
 \dato{\reldate}
