--- a/trunk/divpos_monitor.tex
+++ b/trunk/divpos_monitor.tex
@@ -1,5 +1,5 @@
 \section{DivPos\_monitor: A divergence and position sensitive monitor}
-\label{s:divpos_monitor}
+\label{s:divpos-monitor}
 \index{Monitors!Divergence/position monitor}
 \component{DivPos\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_x$, $n_{\rm h}$, $\eta_{\rm h,max}$, filename}{}{}
 
@@ -21,6 +21,6 @@ I(x,\eta_{\rm h}), M_2(x,\eta_{\rm h})$.
 The arrays are written to a file and can be read e.g. by the tool
 {\bf MC\_plot}, see the system manual.
 
-This component can be used for measuring acceptance diagrams \ref{cussen}.
+This component can be used for measuring acceptance diagrams \cite{cussen}.
 {\bf PSD\_monitor} can easily be changed into being sensitive
-to $y$ and vertical divergence by a ROTATED (0,0,90) command.
+to $y$ and vertical divergence by a 90 degree rotation around the $z$-axis.
