--- a/trunk/monitors.tex
+++ b/trunk/monitors.tex
@@ -19,7 +19,7 @@ and real experiments is
 that one may allow the monitor to be sensitive to any neutron property,
 as {\em e.g.} direction, energy, and divergence, in addition to what
 is found in real-world detectors (space and time). One may, in
-fact, let the monitor have several of these properties at the same time,
+fact, let the monitor record correlations between these properties,
 as seen for example in the divergence/position sensitive monitor in
 section~\ref{s:divpos-monitor}.
 
@@ -30,7 +30,7 @@ weight $p_i$ is added to the weight counting variable:
 $I_i = I_{i-1} + p_i$,
 and the second moment of the weight is
 updated: $M_{2,i} = M_{2,i-1} + p_i^2$.
-As also discussed in the System Manual, after a simulation of $N$ rays
+As also discussed chapter \ref{s:MCtechniques}, after a simulation of $N$ rays
 the detected intensity (in units of neutrons/sec.) is $I_N$,
 while the estimated errorbar is $\sqrt{M_{2,N}^2}$.
 
@@ -39,13 +39,13 @@ Many different monitor components have been developed for
 One example of the monitors we have omitted is the single monitor,
 {\bf Monitor},
 that measures just one number (with errorbars) per simulation.
-This effect is mirrored by any of the 1- or 2-dimensional detectors
+This effect is mirrored by any of the 1- or 2-dimensional components
 we support, e.g. the {\rm PSD\_monitor}.
 In case additional functionality of monitors is required,
 the few code lines of existing monitors can easily be modified.
 
 However, the ultimate solution is the use of the
-``Swiss army knife'' of monitors, {\rm Monitor\_nD}, that can face
+``Swiss army knife'' of monitors, {\bf Monitor\_nD}, that can face
 almost any simulation requirement,
 but will prove challenging for users who like to perform own modifications.
 
