--- a/trunk/psd_monitor.tex
+++ b/trunk/psd_monitor.tex
@@ -9,8 +9,9 @@ The component {\bf PSD\_monitor} resembles other monitors, e.g.
 {\bf TOF\_Monitor}, and also propagates the neutron ray to the detector
 surface in the $(x,y)$-plane, where the detector window is set
 by the $x$ and $y$ input coordinates.
-The PSD monitor, though, is not sensitive to the neutron arrival time, but
-rather its position. The rectangular monitor window, given by the $x$ and $y$
+The PSD monitor, though, is not sensitive to the arrival time
+of the neutron ray, but rather to its position. 
+The rectangular monitor window, given by the $x$ and $y$
 limits is divided into $n_x \times n_y$ pixels.
 
 The output from {\bf PSD\_monitor} is the integrated counts, $n, I, M_2$,
