--- a/trunk/tof_monitor.tex
+++ b/trunk/tof_monitor.tex
@@ -3,15 +3,15 @@
 \index{Monitors!Time-of-flight monitor}
 
 The component {\bf TOF\_monitor} has a rectangular opening
-in the $x-y$ plane, given by the $x$ and $y$ parameters,
-like for {\rm Slit}.
+in the $(x,y)$ plane, given by the $x$ and $y$ parameters,
+like for {\bf Slit}.
 The neutron ray is propagated to the plane of the monitor
 by the kernel call PROP\_Z0.
 A neutron ray is counted if it passes within the rectangular opening 
 given by the $x$ and $y$ limits.
 
 Special about {\bf TOF\_monitor} is that it is sensitive to
-the time, $t$, where the neutron ray hits the component.
+the arrival time, $t$, of the neutron ray.
 Like in a real time-of-flight detector, the time dimension is
 binned into small time intervals.
 Hence this monitor maintains a one-dimensional histogram of counts.
