--- a/trunk/misc.tex
+++ b/trunk/misc.tex
@@ -14,8 +14,8 @@ the simulations by (typically) one or two orders of magnitude.
 The components for doing this trick is {\bf Virtual\_input} and
 {\bf Virtual\_output}, which stores and reads neutron rays, respectively.
 
-Another pair of components performs the simulation of the instrument
-resolution functions. This is {\bf Res\_sample} and {\bf TOF\_Res\_sample}, 
+Other components perform the simulation of the instrument
+resolution functions. These are {\bf Res\_sample} and {\bf TOF\_Res\_sample}, 
 which are to be
 placed at the sample position, and {\bf Res\_monitor}, that should
 be localized at the position of the instrument detector.
