--- a/trunk/virtual_output.tex
+++ b/trunk/virtual_output.tex
@@ -5,8 +5,8 @@
 \component{Virtual\_output}{System}{filename}{buffer-size, type}{}
 
 The component {\bf Virtual\_output} stores the neutron ray parameters
-from a split simulation. The idea is to let the
-next part of the simulation be performed by another instrument file,
+at the end of the first part of a split simulation. The idea is to let the
+next part of the split simulation be performed by another instrument file,
 which reads the stored neutron ray
 parameters by the component {\bf Virtual\_input}.
 
